Create form validation Fix hasBubbles

--- a/app/views/tasting/tasting.scss
+++ b/app/views/tasting/tasting.scss
@@ -38,3 +38,8 @@ ValuesSelector {
     margin-bottom: 8;
     horizontal-align: center;
 }
+
+.invalid-field {
+    border-width: 2;
+    border-color: red
+}
