--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -7,8 +7,9 @@
 // By default each design mode includes these shared imports.
 // App Shared Sass variables belong in app.variables.scss.
 
-@import "../pages/page1/page1";
+@import "../pages/tasting/sight-tab";
+@import "../pages/tasting/taste-tab";
 
-@import "../pages/page2/page2";
+// @import "../pages/page2/page2";
 
-@import "../pages/page3/page3";
+// @import "../pages/page3/page3";
