--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -21,10 +21,10 @@
 // are different per mode.
 
 $colors: (
-  primary:    #387ef5,
-  secondary:  #32db64,
+  primary:    #FFC107,
+  secondary:  #795548,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  favorite:   #69BB7B
+  favorite:   #5D4037
 );
