--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -7,8 +7,7 @@
 // By default each design mode includes these shared imports.
 // App Shared Sass variables belong in app.variables.scss.
 
-@import "../pages/tasting/sight-tab";
-@import "../pages/tasting/taste-tab";
+@import "../pages/tasting/tasting";
 
 // @import "../pages/page2/page2";
 
