--- a/app/pages/tasting/tasting.scss
+++ b/app/pages/tasting/tasting.scss
@@ -1,9 +1,18 @@
-.smell-tab, .sight-tab, .taste-tab {
+.smell-tab, .sight-tab, .taste-tab, .synthesis-tab {
     .label {
         font-size: 1.6rem
     }
 
     .text-light {
         color: #f4f4f4;
+    }
+}
+
+.synthesis-tab {
+    .final-rating-button {
+        height: 5.5rem;
+        width: 5.5rem;
+        padding: 0.5rem;
+        margin: 0 0.5rem;
     }
 }
