--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -8,7 +8,4 @@
 // App Shared Sass variables belong in app.variables.scss.
 
 @import "../pages/tasting/tasting";
-
-// @import "../pages/page2/page2";
-
-// @import "../pages/page3/page3";
+@import "../pages/tastings/tastings";
