--- a/app/pages/tastings/tastings.scss
+++ b/app/pages/tastings/tastings.scss
@@ -3,3 +3,20 @@
     width:2rem;
     margin-top:0.5rem;
 }
+
+.empty-message {
+    margin-top: 30%;
+
+    img {
+        height: 15rem;
+        width: 15rem;
+    }
+
+    h5 {
+        color: #FFC107;
+    }
+
+    button {
+        margin-top: 5rem;
+    }
+}
