Refactoring services Introduce icons font Design empty message

--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -1,5 +1,10 @@
 @import "_material-theme";
+@import "_fonts";
 
 ActionBar {
     color: $primary-color-text;
+}
+
+.icon-24 {
+    font-size: 24;
 }
