--- a/app/views/edit-tasting/edit-tasting.scss
+++ b/app/views/edit-tasting/edit-tasting.scss
@@ -1,5 +1,6 @@
 @import "../../styles/_values-selector";
 @import "../../styles/_final-rating";
+@import "../../styles/_common";
 
 TabView {
     color: $primary-color-text;
