--- a/app/views/main/main.scss
+++ b/app/views/main/main.scss
@@ -65,6 +65,7 @@
         background-color: $primary-color-dark;
         color: $primary-color-text;
         width: 100%;
+        height: 60;
     }
 }
 
