--- a/app/views/grouping-list-picker/grouping-list-picker.scss
+++ b/app/views/grouping-list-picker/grouping-list-picker.scss
@@ -7,25 +7,36 @@
 }
 
 .list-item {
-    height: 48;
+    height: 52;
     font-size: 16;
     color: $primary-text-color;
     padding: 16;
 
-    .winenjoy-icon {
+    .left-icon {
         margin-right: 32;
     }
 }
 
 .expanded-item {
-    color: $primary-color;
+    color: $accent-color;
 }
 
-.countries-list {
+.items-list {
     margin-left: 50;
 }
 
 .title {
     font-size: 20;
     margin:20;
+}
+
+.validate-button {
+    background-color: $accent-color;
+    color: $primary-color-text;
+    height:60;
+    font-size:16;
+}
+
+.check-icon {
+    horizontal-align: right;
 }
