--- a/app/views/informations-tab/informations-tab.scss
+++ b/app/views/informations-tab/informations-tab.scss
@@ -1,6 +1,6 @@
 @import "../../styles/_common";
-@import "../../styles/_values-selector";
 @import "../../styles/_bottom-navigation";
+@import "../../styles/_final-rating";
 @import "../../styles/_fab";
 
 .modal-button {
