--- a/app/views/main/main.scss
+++ b/app/views/main/main.scss
@@ -1,13 +1,5 @@
 @import "../../styles/_common";
-
-.fab-button {
-    height: 70;
-    margin: 15;
-    background-color: $accent-color;
-    horizontal-align: right; /* Android Only */
-    vertical-align: bottom; /* Android Only */
-    color: #fff;  /* iOS Only */
-}
+@import "../../styles/_fab";
 
 .list-item {
     height: 88;
