Finish delete Refactoring

--- a/app/styles/_fab.scss
+++ b/app/styles/_fab.scss
@@ -7,3 +7,12 @@
     horizontal-align: right;
     vertical-align: bottom;
 }
+
+.fab-button-delete {
+    height: 40;
+    margin-right: 22;
+    margin-bottom: 80;
+    background-color:red;
+    horizontal-align: right;
+    vertical-align: bottom;
+}
