--- a/app/views/edit-tasting/edit-tasting.scss
+++ b/app/views/edit-tasting/edit-tasting.scss
@@ -1,7 +1,16 @@
 @import "../../styles/_common";
-@import "../../styles/_values-selector";
 @import "../../styles/_bottom-navigation";
+@import "../../styles/_final-rating";
 @import "../../styles/_fab";
+@import "../../styles/_values-selector";
+
+TabView {
+    color: white;
+}
+
+.tab-view-content {
+    color: $primary-text-color;
+}
 
 .modal-button {
     height: 60;
