--- a/app/views/list-picker/list-picker.scss
+++ b/app/views/list-picker/list-picker.scss
@@ -27,3 +27,9 @@
 .material-icon {
     horizontal-align: right;
 }
+
+.no-result-label {
+    font-size: 18;
+    margin:10;
+    horizontal-align:center;
+}
