--- a/app/styles/_final-rating.scss
+++ b/app/styles/_final-rating.scss
@@ -1,9 +1,19 @@
-@import "_material-theme";
-
-.rating-item {
-    opacity: 0.2;
+.final-rating-4 {
+    color: #007C00;
 }
 
-.selected-rating-item {
-    opacity: 1;
+.final-rating-3 {
+    color: #7BB800;
+}
+
+.final-rating-2 {
+    color: #FFD300;
+}
+
+.final-rating-1 {
+    color: #FF7400;
+}
+
+.final-rating-0 {
+    color: #C50000;
 }
