--- a/app/views/edit-tasting/edit-tasting.scss
+++ b/app/views/edit-tasting/edit-tasting.scss
@@ -1,8 +1,8 @@
 @import "../../styles/_common";
 @import "../../styles/_bottom-navigation";
-@import "../../styles/_final-rating";
 @import "../../styles/_fab";
 @import "../../styles/_values-selector";
+@import "../../styles/_final-rating";
 
 TabView {
     color: white;
@@ -12,29 +12,37 @@ TabView {
     color: $primary-text-color;
 }
 
-.modal-button {
-    height: 60;
-    margin: 10;
-}
-
 ValuesSelector {
     margin-bottom: 8;
     horizontal-align: center;
 }
 
-.criterias-title-no-margin {
+.criterias-title {
     color: $primary-text-color;
     font-size: 18;
     vertical-align: center;
     margin-left: 6;
-}
-
-.criterias-margin {
     margin-top: 8;
     margin-bottom:8;
 }
 
-.criterias-title {
-    @extend .criterias-title-no-margin;
-    @extend .criterias-margin;
+.switch-criteria {
+    width: 100%;
+    margin: 10
+}
+
+.final-rating {
+    font-size: 56;
+    horizontal-align: center;
+
+    Label {
+        margin: 5;
+        opacity: 0.3;
+        padding-top: 10;
+    }
+
+    .selected {
+        opacity: 1;
+        padding-top: 0;
+    }
 }
