--- a/app/views/main/main.scss
+++ b/app/views/main/main.scss
@@ -1,5 +1,6 @@
 @import "../../styles/_common";
 @import "../../styles/_fab";
+@import "../../styles/_final-rating";
 
 .list-item {
     height: 88;
@@ -59,6 +60,12 @@
         width: 100%;
         height: 70;
     }
+}
+
+.final-rating {
+    font-size: 32;
+    horizontal-align: center;
+    vertical-align:center;
 }
 
 .beta-message {
