--- a/app/views/informations-step/informations-step.scss
+++ b/app/views/informations-step/informations-step.scss
@@ -1,10 +1,15 @@
 ﻿@import "../../styles/_common";
+@import "../../styles/_form";
 
-.form-label {
-    color: $primary-text-color;
+DropDown {
     font-size: 18;
-    vertical-align: center;
-    margin-left: 6;
-    margin-top: 8;
-    margin-bottom: 8;
+    width: 100;
+    height: 34;
+    text-align: center;
+}
+
+TextField,
+SearchBar {
+    color: $secondary-text-color;
+    font-size: 16;
 }
