--- a/app/views/nose-step/nose-step.scss
+++ b/app/views/nose-step/nose-step.scss
@@ -1,15 +1,3 @@
 ﻿@import "../../styles/_common";
 @import "../../styles/_values-selector";
-
-.form-label {
-    color: $primary-text-color;
-    font-size: 18;
-    vertical-align: center;
-    margin-left: 6;
-    margin-top: 8;
-    margin-bottom: 8;
-}
-
-ValuesSelector {
-    margin-left: 6;
-}
+@import "../../styles/_form";
