--- a/app/views/all-in-one/all-in-one.scss
+++ b/app/views/all-in-one/all-in-one.scss
@@ -1,3 +1,19 @@
 ﻿@import "../../styles/_common";
 @import "../../styles/_values-selector";
 @import "../../styles/_form";
+
+CardView {
+    margin: 6;
+}
+
+Page {
+    background-color: $primary-color-light;
+}
+
+#progressContainer {
+    background-color: $primary-color;
+}
+
+Progress {
+    background-color: $primary-color-light;
+}
