--- a/app/views/edit-tasting/edit-tasting.scss
+++ b/app/views/edit-tasting/edit-tasting.scss
@@ -1,52 +1,18 @@
-@import "../../styles/_common";
-@import "../../styles/_bottom-navigation";
-@import "../../styles/_fab";
+﻿@import "../../styles/_common";
 @import "../../styles/_values-selector";
+@import "../../styles/_form";
 @import "../../styles/_final-rating";
+
+.gradient-color-scroll-view {
+    background-color: white;
+    margin: 6;
+    padding: 6;
+}
 
 TabView {
     color: white;
 }
 
-.tab-view-content {
-    color: $primary-text-color;
-}
-
-ValuesSelector {
-    margin-bottom: 8;
-    horizontal-align: center;
-}
-
-.criterias-title {
-    color: $primary-text-color;
-    font-size: 18;
-    vertical-align: center;
-    margin-left: 6;
-    margin-top: 8;
-    margin-bottom:8;
-}
-
-.switch-criteria {
-    width: 100%;
-    margin: 10
-}
-
-.final-rating {
-    font-size: 56;
-    horizontal-align: center;
-
-    Label {
-        margin: 5;
-        opacity: 0.3;
-        padding-top: 10;
-    }
-
-    .selected {
-        opacity: 1;
-        padding-top: 0;
-    }
-}
-
-.tasting-picture {
-    margin: 10;
+TabView ScrollView {
+    color: $primary-color;
 }
