Update npm packages / Continue to bind fields

--- a/app/views/edit-tasting/edit-tasting.scss
+++ b/app/views/edit-tasting/edit-tasting.scss
@@ -16,3 +16,9 @@ TabView {
 TabView ScrollView {
     color: $primary-color;
 }
+
+DropDown {
+    text-align: center;
+    padding: 6;
+    font-size: 18;
+}
