--- a/app/views/main/main.scss
+++ b/app/views/main/main.scss
@@ -1,90 +1,9 @@
 @import "../../styles/_common";
-@import "../../styles/_fab";
 @import "../../styles/_final-rating";
 
-.list-item {
-    padding: 16;
-}
-
-.list-item-icon {
-    height: 40;
-    width: 40;
-    border-radius: 20;
-    margin-right: 16;
-    vertical-align: top;
-}
-
-.list-item-title {
-    font-size: 16;
-    color: $primary-text-color;
-}
-
-.list-item-secondary {
-    font-size: 14;
-    color: $secondary-text-color;
-}
-
-.empty-container {
-    vertical-align: center;
-    horizontal-align: center;
-    text-align: center;
-
-    .empty-message {
-        vertical-align: center;
-        horizontal-align: center;
-        text-align: center;
-        border-width: 1;
-        border-color: $accent-color;
-        border-radius: 250;
-        height: 250;
-        width: 250;
-        background-color: $accent-color;
-        color: $primary-color-text;
-
-        .winenjoy-icon {
-            font-size: 120;
-        }
-
-        .no-tasting-message {
-            margin-top: 20;
-            font-size: 18;
-        }
-    }
-
-    .first-tasting-button {
-        margin-top: 30;
-        background-color: $primary-color-dark;
-        color: $primary-color-text;
-        width: 100%;
-        height: 70;
-    }
-}
-
-.final-rating {
-    font-size: 32;
-    horizontal-align: center;
-    vertical-align: center;
-}
-
-.final-rating-4 {
-    color: #007C00;
-}
-
-.final-rating-3 {
-    color: #7BB800;
-}
-
-.final-rating-2 {
-    color: #FFD300;
-}
-
-.final-rating-1 {
-    color: #FF7400;
-}
-
-.final-rating-0 {
-    color: #C50000;
-}
+@import "_empty";
+@import "_fab";
+@import "_list";
 
 .busy-indicator {
     horizontal-align: center;
@@ -95,15 +14,4 @@
         height: 56;
         margin: 6;
     }
-}
-
-.location-separator {
-    margin-left: 6;
-    margin-right: 6;
-}
-
-.picture-icon {
-    font-size: 22;
-    horizontal-align: center;
-    text-align: center;
 }
